# entropy-gate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/entropy_gate/: __init__.py  cli.py  config.py  dedup.py  energy.py  fidelity.py  memory.py  models.py  profiles.py  proxy.py  quenching.py  semantic.py  structure.py
tests/: test_dedup.py  test_energy.py  test_fidelity.py  test_integration.py  test_proxy_headers.py  test_quenching.py  test_structure.py
